// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": false,
      "message": "Number must be greater than 0",
      "minimum": 0,
      "path": [
        "logNumber",
      ],
      "type": "number",
    },
    {
      "code": "invalid_string",
      "message": "Invalid",
      "path": [
        "entryTime",
        "date",
      ],
      "validation": "regex",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received boolean",
      "path": [
        "bottomTime",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "duration",
      ],
      "received": "string",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "maxDepth",
        "depth",
      ],
      "type": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'm' | 'ft', received 'fathoms'",
      "options": [
        "m",
        "ft",
      ],
      "path": [
        "maxDepth",
        "unit",
      ],
      "received": "fathoms",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "notes",
      ],
      "received": "number",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "entryTime",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "duration",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is missing required fields 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "entryTime",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "duration",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the site ID cannot be found 1`] = `"Dive site with ID "37a214f6-6167-4468-947d-b3171a0425fd" not found."`;

exports[`Log entries E2E tests when fetching recent dive sites will allow admins to query the most recent dive sites for any user 1`] = `
[
  {
    "id": "f2026af7-0f73-4fc0-b29b-491dc2846842",
    "name": "caring nutty grub",
  },
  {
    "id": "c14340a8-858b-478e-8308-c800149777a7",
    "name": "damp forsaken chapter",
  },
  {
    "id": "4e87dc06-4d51-4d11-ba93-37e51924ff44",
    "name": "deadly lean mobile",
  },
  {
    "id": "74aa1202-9d61-443b-b8f5-44dde5ef18d5",
    "name": "exotic warmhearted aside",
  },
  {
    "id": "366e96ef-045d-464e-9a2f-7c92074cc41a",
    "name": "old-fashioned unwieldy cartridge",
  },
  {
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "name": "original pitiful resource",
  },
  {
    "id": "fac282b1-e048-4534-857c-dfef02ee9889",
    "name": "rude ajar aggradation",
  },
  {
    "id": "90bcafd4-90b6-41d5-9b70-db36b470dcaf",
    "name": "shameful glorious noodles",
  },
  {
    "id": "3b9bdf22-0b5b-4f6b-9ec4-f5dfdb0bebe1",
    "name": "specific dead ramen",
  },
  {
    "id": "58f628bf-dc5e-449e-8ee0-7248d1abff26",
    "name": "utter extraneous calm",
  },
]
`;

exports[`Log entries E2E tests when fetching recent dive sites will return a 400 response if query string is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "count",
      ],
      "received": "nan",
    },
  ],
}
`;

exports[`Log entries E2E tests when fetching recent dive sites will return the most recently visited dive sites 1`] = `
[
  {
    "id": "f2026af7-0f73-4fc0-b29b-491dc2846842",
    "name": "caring nutty grub",
  },
  {
    "id": "c14340a8-858b-478e-8308-c800149777a7",
    "name": "damp forsaken chapter",
  },
  {
    "id": "4e87dc06-4d51-4d11-ba93-37e51924ff44",
    "name": "deadly lean mobile",
  },
  {
    "id": "74aa1202-9d61-443b-b8f5-44dde5ef18d5",
    "name": "exotic warmhearted aside",
  },
  {
    "id": "4d91a56c-f68a-4c11-9b06-ed1030cecec0",
    "name": "meaty weird good",
  },
  {
    "id": "366e96ef-045d-464e-9a2f-7c92074cc41a",
    "name": "old-fashioned unwieldy cartridge",
  },
  {
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "name": "original pitiful resource",
  },
  {
    "id": "fac282b1-e048-4534-857c-dfef02ee9889",
    "name": "rude ajar aggradation",
  },
  {
    "id": "ca7960d0-cd3e-4dd3-80d8-f738369dbae6",
    "name": "rundown joyous put",
  },
  {
    "id": "90bcafd4-90b6-41d5-9b70-db36b470dcaf",
    "name": "shameful glorious noodles",
  },
  {
    "id": "3b9bdf22-0b5b-4f6b-9ec4-f5dfdb0bebe1",
    "name": "specific dead ramen",
  },
  {
    "id": "31564910-9f3d-45dc-b0c8-f836e7ff7b8d",
    "name": "spotless gifted gallon",
  },
  {
    "id": "b24146f0-08ed-47fc-8bb3-98371c2c2909",
    "name": "tattered rigid forever",
  },
  {
    "id": "58f628bf-dc5e-449e-8ee0-7248d1abff26",
    "name": "utter extraneous calm",
  },
  {
    "id": "ed537618-c11d-468c-9e88-867c288e649f",
    "name": "well-worn upbeat trillion",
  },
]
`;

exports[`Log entries E2E tests when retrieving single log entries will allow an admin to view any log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 38.966187483631074,
      "material": "fe",
      "name": "basic pit",
      "o2Percent": 26.2,
      "pressureUnit": "bar",
      "startPressure": 231.04141951538622,
      "volume": 15,
      "workingPressure": 207,
    },
  ],
  "bottomTime": 62,
  "creator": {
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "duration": 69,
  "entryTime": {
    "date": "2023-02-15T13:06:02",
    "timezone": "America/Punta_Arenas",
  },
  "id": "1aa55632-80db-42a9-a06f-462baa86d11a",
  "logNumber": 822,
  "maxDepth": {
    "depth": 32.1,
    "unit": "ft",
  },
  "notes": "Voluptates abduco cogo calculus voco. Arto calamitas undique delego absens agnitio accedo. Tamen quisquam chirographum vis asper.",
  "site": {
    "averageRating": 1.43,
    "createdOn": "2024-04-10T03:49:32.952Z",
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
      "location": "West Covina",
      "logBookSharing": "private",
      "memberSince": "2020-02-24T22:30:50.944Z",
      "name": "Devin Ratke",
      "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
      "username": "Ayla.Rippin",
    },
    "depth": {
      "depth": 36.14,
      "unit": "ft",
    },
    "description": "Mollitia crebro solutio comedo velit theca cresco. Tardus una attonbitus aurum versus confero triumphus canto sumptus. Asporto dolore adaugeo censura amplus synagoga unde demoror ara commodo.",
    "directions": "Vinitor cura dapifer trado aperte statua vestigium valens. Acies consequatur quia carus. Cotidie dedico solium contigo tredecim claustrum convoco ut varietas.",
    "freeToDive": true,
    "gps": {
      "lat": 27.2481,
      "lon": -174.3613,
    },
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "location": "East Shawnhaven",
    "name": "original pitiful resource",
    "shoreAccess": false,
    "updatedOn": "2023-12-26T03:21:37.584Z",
    "waterType": "salt",
  },
  "weights": {
    "unit": "lbs",
    "weight": 0.7,
  },
}
`;

exports[`Log entries E2E tests when retrieving single log entries will return the requested log entry 1`] = `
{
  "air": [
    {
      "count": 1,
      "endPressure": 38.966187483631074,
      "material": "fe",
      "name": "basic pit",
      "o2Percent": 26.2,
      "pressureUnit": "bar",
      "startPressure": 231.04141951538622,
      "volume": 15,
      "workingPressure": 207,
    },
  ],
  "bottomTime": 62,
  "creator": {
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "duration": 69,
  "entryTime": {
    "date": "2023-02-15T13:06:02",
    "timezone": "America/Punta_Arenas",
  },
  "id": "1aa55632-80db-42a9-a06f-462baa86d11a",
  "logNumber": 822,
  "maxDepth": {
    "depth": 32.1,
    "unit": "ft",
  },
  "notes": "Voluptates abduco cogo calculus voco. Arto calamitas undique delego absens agnitio accedo. Tamen quisquam chirographum vis asper.",
  "site": {
    "averageRating": 1.43,
    "createdOn": "2024-04-10T03:49:32.952Z",
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
      "location": "West Covina",
      "logBookSharing": "private",
      "memberSince": "2020-02-24T22:30:50.944Z",
      "name": "Devin Ratke",
      "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
      "username": "Ayla.Rippin",
    },
    "depth": {
      "depth": 36.14,
      "unit": "ft",
    },
    "description": "Mollitia crebro solutio comedo velit theca cresco. Tardus una attonbitus aurum versus confero triumphus canto sumptus. Asporto dolore adaugeo censura amplus synagoga unde demoror ara commodo.",
    "directions": "Vinitor cura dapifer trado aperte statua vestigium valens. Acies consequatur quia carus. Cotidie dedico solium contigo tredecim claustrum convoco ut varietas.",
    "freeToDive": true,
    "gps": {
      "lat": 27.2481,
      "lon": -174.3613,
    },
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "location": "East Shawnhaven",
    "name": "original pitiful resource",
    "shoreAccess": false,
    "updatedOn": "2023-12-26T03:21:37.584Z",
    "waterType": "salt",
  },
  "weights": {
    "unit": "lbs",
    "weight": 0.7,
  },
}
`;

exports[`Log entries E2E tests when searching log entries will allow a search with parameters 1`] = `
[
  {
    "air": [
      {
        "count": 1,
        "endPressure": 38.966187483631074,
        "material": "fe",
        "name": "basic pit",
        "o2Percent": 26.2,
        "pressureUnit": "bar",
        "startPressure": 231.04141951538622,
        "volume": 15,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2023-02-15T13:06:02",
      "timezone": "America/Punta_Arenas",
    },
    "id": "1aa55632-80db-42a9-a06f-462baa86d11a",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 700,
        "material": "fe",
        "name": "offbeat breath",
        "pressureUnit": "psi",
        "startPressure": 3300,
        "volume": 11,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2023-02-17T15:32:53",
      "timezone": "Asia/Seoul",
    },
    "id": "7b530156-e4dc-4d3a-a529-351820ac4c0e",
    "owner": "Ayla.Rippin",
    "site": "far-off critical machine",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 61.8120562734548,
        "material": "fe",
        "name": "skinny horde",
        "o2Percent": 31,
        "pressureUnit": "bar",
        "startPressure": 210.58061412535608,
        "volume": 11,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2023-02-19T04:59:56",
      "timezone": "Indian/Comoro",
    },
    "id": "d8defd5d-1795-4d39-a49f-36fb68d9f57b",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 650,
        "material": "al",
        "name": "sophisticated someone",
        "o2Percent": 34.1,
        "pressureUnit": "psi",
        "startPressure": 3410,
        "volume": 18,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2023-03-05T19:51:44",
      "timezone": "Europe/Prague",
    },
    "id": "9d82d7fb-6d7c-47b1-aab7-e00e1f86e981",
    "owner": "Ayla.Rippin",
    "site": "steel monthly hypothesis",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 38.77854072256014,
        "material": "al",
        "name": "unwieldy western",
        "o2Percent": 26.4,
        "pressureUnit": "bar",
        "startPressure": 196.37803754070774,
        "volume": 15,
        "workingPressure": 237,
      },
    ],
    "entryTime": {
      "date": "2023-04-22T00:56:28",
      "timezone": "Asia/Karachi",
    },
    "id": "0379a52c-3eb9-4adf-a849-574ef05ecaf9",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 1070,
        "material": "al",
        "name": "haunting halt",
        "o2Percent": 29.6,
        "pressureUnit": "psi",
        "startPressure": 3140,
        "volume": 4,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2023-05-18T10:40:56",
      "timezone": "Africa/Kampala",
    },
    "id": "b2ac8672-c655-4968-83da-92e26bdcb4a5",
    "owner": "Ayla.Rippin",
    "site": "specific infinite chalice",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 640,
        "material": "fe",
        "name": "organic timer",
        "o2Percent": 36.5,
        "pressureUnit": "psi",
        "startPressure": 3020,
        "volume": 18,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2023-06-09T01:34:45",
      "timezone": "Europe/Riga",
    },
    "id": "db6d84ff-e2f9-438b-b22f-69778ee2bb48",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 50.50443415460177,
        "material": "al",
        "name": "enchanting colonial",
        "o2Percent": 27.2,
        "pressureUnit": "bar",
        "startPressure": 239.70492490101606,
        "volume": 12,
        "workingPressure": 207,
      },
    ],
    "entryTime": {
      "date": "2023-07-03T16:19:20",
      "timezone": "Asia/Bahrain",
    },
    "id": "20e2afc7-c2db-443c-a6dd-6558164c5754",
    "owner": "Ayla.Rippin",
    "site": "gloomy acceptable hummus",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will allow admins to search another user's log entries 1`] = `
[
  {
    "entryTime": {
      "date": "2024-06-06T11:40:52",
      "timezone": "Asia/Hebron",
    },
    "id": "5d2d1e99-7eb8-48f4-bece-6da91c1f93e3",
    "owner": "Ayla.Rippin",
    "site": "damp forsaken chapter",
  },
  {
    "entryTime": {
      "date": "2024-05-05T11:56:55",
      "timezone": "Pacific/Efate",
    },
    "id": "f744534a-99b2-48bc-a081-636189d81871",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2024-04-17T18:04:48",
      "timezone": "Europe/Athens",
    },
    "id": "6a074039-7efd-4efd-93cd-6991e391e309",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": {
      "date": "2024-04-04T02:16:50",
      "timezone": "America/Fortaleza",
    },
    "id": "b69cbcb2-4c3a-459f-ab96-96d5972325f3",
    "owner": "Ayla.Rippin",
    "site": "old-fashioned unwieldy cartridge",
  },
  {
    "entryTime": {
      "date": "2024-03-24T17:14:19",
      "timezone": "Atlantic/South_Georgia",
    },
    "id": "2b952128-0c77-4ed4-b7de-00d316da7e88",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": {
      "date": "2024-03-21T12:11:29",
      "timezone": "Africa/Sao_Tome",
    },
    "id": "c32989ce-ba33-4fc5-ab94-c477dd559d40",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": {
      "date": "2024-03-14T07:06:05",
      "timezone": "Africa/Maseru",
    },
    "id": "1258bb56-9f90-4514-a765-42f887bcd1e6",
    "owner": "Ayla.Rippin",
    "site": "rude ajar aggradation",
  },
  {
    "entryTime": {
      "date": "2024-02-11T12:25:35",
      "timezone": "Asia/Kamchatka",
    },
    "id": "110b1760-6d4c-47f9-bf78-026431cd129f",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": {
      "date": "2024-01-09T06:05:56",
      "timezone": "Africa/Lagos",
    },
    "id": "e4d1089c-081f-486b-9fd4-200317180754",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": {
      "date": "2024-01-07T19:45:58",
      "timezone": "Africa/Porto-Novo",
    },
    "id": "d675b414-c335-47db-8969-8d735707c994",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": {
      "date": "2023-12-19T16:13:13",
      "timezone": "Pacific/Kosrae",
    },
    "id": "24d678ec-7c2c-4b9a-b0f4-a568e26f85e1",
    "owner": "Ayla.Rippin",
    "site": "shameful glorious noodles",
  },
  {
    "entryTime": {
      "date": "2023-12-08T20:06:04",
      "timezone": "Europe/Moscow",
    },
    "id": "c788bc9d-ba97-4dd7-a5cc-1ca090071b9d",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": {
      "date": "2023-12-08T02:08:34",
      "timezone": "America/Montevideo",
    },
    "id": "2a79cb25-b13b-4c8b-bf8d-6ea3d5381fb3",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": {
      "date": "2023-11-19T23:18:41",
      "timezone": "America/Detroit",
    },
    "id": "a9e030c6-dc58-4161-8cda-741a14c0c67b",
    "owner": "Ayla.Rippin",
    "site": "well-worn upbeat trillion",
  },
  {
    "entryTime": {
      "date": "2023-11-11T18:30:33",
      "timezone": "America/Phoenix",
    },
    "id": "b6d7161e-54c9-4e6b-869d-6b2824de0604",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2023-10-31T19:30:24",
      "timezone": "Europe/Vaduz",
    },
    "id": "86f85861-97be-4f52-bd81-4425d8599b79",
    "owner": "Ayla.Rippin",
    "site": "rundown joyous put",
  },
  {
    "entryTime": {
      "date": "2023-10-07T06:27:00",
      "timezone": "Asia/Dushanbe",
    },
    "id": "57c60339-924f-4e74-9556-fb8c256fe547",
    "owner": "Ayla.Rippin",
    "site": "tattered rigid forever",
  },
  {
    "entryTime": {
      "date": "2023-10-06T21:11:16",
      "timezone": "Africa/Freetown",
    },
    "id": "dc8c70c8-d268-49d0-ae4a-abf94d7e4b3c",
    "owner": "Ayla.Rippin",
    "site": "humble crazy cockpit",
  },
  {
    "entryTime": {
      "date": "2023-09-22T17:13:37",
      "timezone": "Asia/Dubai",
    },
    "id": "cecea137-0a0e-4f21-b86b-bd670aa9503e",
    "owner": "Ayla.Rippin",
    "site": "ringed regal temporary",
  },
  {
    "entryTime": {
      "date": "2023-08-10T05:40:43",
      "timezone": "America/North_Dakota/New_Salem",
    },
    "id": "86ebece0-2c0e-43f0-b4c4-20353478d33e",
    "owner": "Ayla.Rippin",
    "site": "scornful well-worn baggage",
  },
  {
    "entryTime": {
      "date": "2023-08-09T04:49:53",
      "timezone": "America/North_Dakota/Center",
    },
    "id": "44ea53d2-24d6-4174-a28d-589b8730eb9e",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2023-08-06T18:33:35",
      "timezone": "Pacific/Honolulu",
    },
    "id": "2953aa3b-ec66-410f-b8c0-b5c5b55cd46e",
    "owner": "Ayla.Rippin",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": {
      "date": "2023-08-04T08:10:50",
      "timezone": "Europe/Bucharest",
    },
    "id": "b8ab7aea-414b-497a-859f-a7a664460916",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2023-07-03T16:19:20",
      "timezone": "Asia/Bahrain",
    },
    "id": "20e2afc7-c2db-443c-a6dd-6558164c5754",
    "owner": "Ayla.Rippin",
    "site": "gloomy acceptable hummus",
  },
  {
    "entryTime": {
      "date": "2023-06-09T01:34:45",
      "timezone": "Europe/Riga",
    },
    "id": "db6d84ff-e2f9-438b-b22f-69778ee2bb48",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": {
      "date": "2023-05-18T10:40:56",
      "timezone": "Africa/Kampala",
    },
    "id": "b2ac8672-c655-4968-83da-92e26bdcb4a5",
    "owner": "Ayla.Rippin",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": {
      "date": "2023-04-22T00:56:28",
      "timezone": "Asia/Karachi",
    },
    "id": "0379a52c-3eb9-4adf-a849-574ef05ecaf9",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": {
      "date": "2023-03-05T19:51:44",
      "timezone": "Europe/Prague",
    },
    "id": "9d82d7fb-6d7c-47b1-aab7-e00e1f86e981",
    "owner": "Ayla.Rippin",
    "site": "steel monthly hypothesis",
  },
  {
    "entryTime": {
      "date": "2023-02-19T04:59:56",
      "timezone": "Indian/Comoro",
    },
    "id": "d8defd5d-1795-4d39-a49f-36fb68d9f57b",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "entryTime": {
      "date": "2023-02-17T15:32:53",
      "timezone": "Asia/Seoul",
    },
    "id": "7b530156-e4dc-4d3a-a529-351820ac4c0e",
    "owner": "Ayla.Rippin",
    "site": "far-off critical machine",
  },
  {
    "entryTime": {
      "date": "2023-02-15T13:06:02",
      "timezone": "America/Punta_Arenas",
    },
    "id": "1aa55632-80db-42a9-a06f-462baa86d11a",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": {
      "date": "2023-02-11T01:08:45",
      "timezone": "Asia/Kabul",
    },
    "id": "67213638-59b3-4aa2-ace2-fc1629c4ad19",
    "owner": "Ayla.Rippin",
    "site": "whirlwind measly subset",
  },
  {
    "entryTime": {
      "date": "2023-01-15T07:04:05",
      "timezone": "Australia/Darwin",
    },
    "id": "0da96f54-bc49-423c-bc58-cec73cff96ba",
    "owner": "Ayla.Rippin",
    "site": "yummy fitting waterwheel",
  },
  {
    "entryTime": {
      "date": "2023-01-12T23:14:00",
      "timezone": "America/Martinique",
    },
    "id": "42492cf3-33ff-4694-b3ff-cad63953b8dc",
    "owner": "Ayla.Rippin",
    "site": "joint bogus exit",
  },
  {
    "entryTime": {
      "date": "2023-01-11T22:00:08",
      "timezone": "Asia/Tehran",
    },
    "id": "704ee246-38b7-4731-af1d-29d5e634f1b3",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": {
      "date": "2023-01-03T19:03:37",
      "timezone": "America/Argentina/Buenos_Aires",
    },
    "id": "f2f89f0c-b5b4-42f4-a328-e3971c134a22",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": {
      "date": "2022-12-23T12:46:24",
      "timezone": "Pacific/Niue",
    },
    "id": "17c89390-fff1-49ff-a6ae-b38e5be7af35",
    "owner": "Ayla.Rippin",
    "site": "vicious difficult skean",
  },
  {
    "entryTime": {
      "date": "2022-12-21T09:45:37",
      "timezone": "Europe/Vienna",
    },
    "id": "debd1095-a5a0-419f-9051-13e406705fe1",
    "owner": "Ayla.Rippin",
    "site": "modern sorrowful girdle",
  },
  {
    "entryTime": {
      "date": "2022-12-19T05:01:46",
      "timezone": "Indian/Mauritius",
    },
    "id": "b44f77c0-2d35-4a06-aa46-cbd42551b496",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": {
      "date": "2022-12-10T16:44:57",
      "timezone": "Europe/Bucharest",
    },
    "id": "91f6336b-8946-44cb-a47a-560980aa23a5",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2022-12-05T12:16:05",
      "timezone": "Australia/Sydney",
    },
    "id": "7134402d-6581-4e03-a803-7784b29a317c",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": {
      "date": "2022-11-28T21:17:57",
      "timezone": "Pacific/Kosrae",
    },
    "id": "55938f9c-b856-4688-a3ca-6167d1c4b70b",
    "owner": "Ayla.Rippin",
    "site": "squeaky scaly sled",
  },
  {
    "entryTime": {
      "date": "2022-11-07T21:21:03",
      "timezone": "Indian/Mahe",
    },
    "id": "1d56f0e3-4618-4ef6-b233-b19e1b7c4800",
    "owner": "Ayla.Rippin",
    "site": "ringed regal temporary",
  },
  {
    "entryTime": {
      "date": "2022-10-15T03:15:28",
      "timezone": "Indian/Maldives",
    },
    "id": "f18f49f5-7231-4f68-9e14-52253e909f25",
    "owner": "Ayla.Rippin",
    "site": "sympathetic mortified taxicab",
  },
  {
    "entryTime": {
      "date": "2022-10-14T13:37:36",
      "timezone": "Asia/Choibalsan",
    },
    "id": "f4711acb-5f22-49fc-8ebe-bb32da8d7f5e",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": {
      "date": "2022-08-07T09:19:25",
      "timezone": "America/Scoresbysund",
    },
    "id": "7eed022f-e4a9-4796-b5d1-4f721b0b9cfc",
    "owner": "Ayla.Rippin",
    "site": "bold staid lode",
  },
  {
    "entryTime": {
      "date": "2022-08-04T02:56:05",
      "timezone": "Asia/Hovd",
    },
    "id": "50d8e983-4a87-4c2d-bece-f361ef4f8613",
    "owner": "Ayla.Rippin",
    "site": "humming past mathematics",
  },
  {
    "entryTime": {
      "date": "2022-07-26T00:48:15",
      "timezone": "America/Jamaica",
    },
    "id": "5f8a859b-e120-44b9-bdd2-acdc3d596b30",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2022-07-22T23:57:56",
      "timezone": "Europe/Warsaw",
    },
    "id": "b8500a63-4f9c-4998-8be1-58336eacf891",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": {
      "date": "2022-06-17T07:26:24",
      "timezone": "Europe/Kaliningrad",
    },
    "id": "2b859f47-e520-4c09-9280-e51532f62e2c",
    "owner": "Ayla.Rippin",
    "site": "modern sorrowful girdle",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will perform a basic search for log entries 1`] = `
[
  {
    "entryTime": {
      "date": "2024-06-06T11:40:52",
      "timezone": "Asia/Hebron",
    },
    "id": "5d2d1e99-7eb8-48f4-bece-6da91c1f93e3",
    "owner": "Ayla.Rippin",
    "site": "damp forsaken chapter",
  },
  {
    "entryTime": {
      "date": "2024-05-05T11:56:55",
      "timezone": "Pacific/Efate",
    },
    "id": "f744534a-99b2-48bc-a081-636189d81871",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2024-04-17T18:04:48",
      "timezone": "Europe/Athens",
    },
    "id": "6a074039-7efd-4efd-93cd-6991e391e309",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": {
      "date": "2024-04-04T02:16:50",
      "timezone": "America/Fortaleza",
    },
    "id": "b69cbcb2-4c3a-459f-ab96-96d5972325f3",
    "owner": "Ayla.Rippin",
    "site": "old-fashioned unwieldy cartridge",
  },
  {
    "entryTime": {
      "date": "2024-03-24T17:14:19",
      "timezone": "Atlantic/South_Georgia",
    },
    "id": "2b952128-0c77-4ed4-b7de-00d316da7e88",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": {
      "date": "2024-03-21T12:11:29",
      "timezone": "Africa/Sao_Tome",
    },
    "id": "c32989ce-ba33-4fc5-ab94-c477dd559d40",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": {
      "date": "2024-03-14T07:06:05",
      "timezone": "Africa/Maseru",
    },
    "id": "1258bb56-9f90-4514-a765-42f887bcd1e6",
    "owner": "Ayla.Rippin",
    "site": "rude ajar aggradation",
  },
  {
    "entryTime": {
      "date": "2024-02-11T12:25:35",
      "timezone": "Asia/Kamchatka",
    },
    "id": "110b1760-6d4c-47f9-bf78-026431cd129f",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": {
      "date": "2024-01-09T06:05:56",
      "timezone": "Africa/Lagos",
    },
    "id": "e4d1089c-081f-486b-9fd4-200317180754",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": {
      "date": "2024-01-07T19:45:58",
      "timezone": "Africa/Porto-Novo",
    },
    "id": "d675b414-c335-47db-8969-8d735707c994",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": {
      "date": "2023-12-19T16:13:13",
      "timezone": "Pacific/Kosrae",
    },
    "id": "24d678ec-7c2c-4b9a-b0f4-a568e26f85e1",
    "owner": "Ayla.Rippin",
    "site": "shameful glorious noodles",
  },
  {
    "entryTime": {
      "date": "2023-12-08T20:06:04",
      "timezone": "Europe/Moscow",
    },
    "id": "c788bc9d-ba97-4dd7-a5cc-1ca090071b9d",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": {
      "date": "2023-12-08T02:08:34",
      "timezone": "America/Montevideo",
    },
    "id": "2a79cb25-b13b-4c8b-bf8d-6ea3d5381fb3",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": {
      "date": "2023-11-19T23:18:41",
      "timezone": "America/Detroit",
    },
    "id": "a9e030c6-dc58-4161-8cda-741a14c0c67b",
    "owner": "Ayla.Rippin",
    "site": "well-worn upbeat trillion",
  },
  {
    "entryTime": {
      "date": "2023-11-11T18:30:33",
      "timezone": "America/Phoenix",
    },
    "id": "b6d7161e-54c9-4e6b-869d-6b2824de0604",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2023-10-31T19:30:24",
      "timezone": "Europe/Vaduz",
    },
    "id": "86f85861-97be-4f52-bd81-4425d8599b79",
    "owner": "Ayla.Rippin",
    "site": "rundown joyous put",
  },
  {
    "entryTime": {
      "date": "2023-10-07T06:27:00",
      "timezone": "Asia/Dushanbe",
    },
    "id": "57c60339-924f-4e74-9556-fb8c256fe547",
    "owner": "Ayla.Rippin",
    "site": "tattered rigid forever",
  },
  {
    "entryTime": {
      "date": "2023-10-06T21:11:16",
      "timezone": "Africa/Freetown",
    },
    "id": "dc8c70c8-d268-49d0-ae4a-abf94d7e4b3c",
    "owner": "Ayla.Rippin",
    "site": "humble crazy cockpit",
  },
  {
    "entryTime": {
      "date": "2023-09-22T17:13:37",
      "timezone": "Asia/Dubai",
    },
    "id": "cecea137-0a0e-4f21-b86b-bd670aa9503e",
    "owner": "Ayla.Rippin",
    "site": "ringed regal temporary",
  },
  {
    "entryTime": {
      "date": "2023-08-10T05:40:43",
      "timezone": "America/North_Dakota/New_Salem",
    },
    "id": "86ebece0-2c0e-43f0-b4c4-20353478d33e",
    "owner": "Ayla.Rippin",
    "site": "scornful well-worn baggage",
  },
  {
    "entryTime": {
      "date": "2023-08-09T04:49:53",
      "timezone": "America/North_Dakota/Center",
    },
    "id": "44ea53d2-24d6-4174-a28d-589b8730eb9e",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2023-08-06T18:33:35",
      "timezone": "Pacific/Honolulu",
    },
    "id": "2953aa3b-ec66-410f-b8c0-b5c5b55cd46e",
    "owner": "Ayla.Rippin",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": {
      "date": "2023-08-04T08:10:50",
      "timezone": "Europe/Bucharest",
    },
    "id": "b8ab7aea-414b-497a-859f-a7a664460916",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2023-07-03T16:19:20",
      "timezone": "Asia/Bahrain",
    },
    "id": "20e2afc7-c2db-443c-a6dd-6558164c5754",
    "owner": "Ayla.Rippin",
    "site": "gloomy acceptable hummus",
  },
  {
    "entryTime": {
      "date": "2023-06-09T01:34:45",
      "timezone": "Europe/Riga",
    },
    "id": "db6d84ff-e2f9-438b-b22f-69778ee2bb48",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": {
      "date": "2023-05-18T10:40:56",
      "timezone": "Africa/Kampala",
    },
    "id": "b2ac8672-c655-4968-83da-92e26bdcb4a5",
    "owner": "Ayla.Rippin",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": {
      "date": "2023-04-22T00:56:28",
      "timezone": "Asia/Karachi",
    },
    "id": "0379a52c-3eb9-4adf-a849-574ef05ecaf9",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": {
      "date": "2023-03-05T19:51:44",
      "timezone": "Europe/Prague",
    },
    "id": "9d82d7fb-6d7c-47b1-aab7-e00e1f86e981",
    "owner": "Ayla.Rippin",
    "site": "steel monthly hypothesis",
  },
  {
    "entryTime": {
      "date": "2023-02-19T04:59:56",
      "timezone": "Indian/Comoro",
    },
    "id": "d8defd5d-1795-4d39-a49f-36fb68d9f57b",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "entryTime": {
      "date": "2023-02-17T15:32:53",
      "timezone": "Asia/Seoul",
    },
    "id": "7b530156-e4dc-4d3a-a529-351820ac4c0e",
    "owner": "Ayla.Rippin",
    "site": "far-off critical machine",
  },
  {
    "entryTime": {
      "date": "2023-02-15T13:06:02",
      "timezone": "America/Punta_Arenas",
    },
    "id": "1aa55632-80db-42a9-a06f-462baa86d11a",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": {
      "date": "2023-02-11T01:08:45",
      "timezone": "Asia/Kabul",
    },
    "id": "67213638-59b3-4aa2-ace2-fc1629c4ad19",
    "owner": "Ayla.Rippin",
    "site": "whirlwind measly subset",
  },
  {
    "entryTime": {
      "date": "2023-01-15T07:04:05",
      "timezone": "Australia/Darwin",
    },
    "id": "0da96f54-bc49-423c-bc58-cec73cff96ba",
    "owner": "Ayla.Rippin",
    "site": "yummy fitting waterwheel",
  },
  {
    "entryTime": {
      "date": "2023-01-12T23:14:00",
      "timezone": "America/Martinique",
    },
    "id": "42492cf3-33ff-4694-b3ff-cad63953b8dc",
    "owner": "Ayla.Rippin",
    "site": "joint bogus exit",
  },
  {
    "entryTime": {
      "date": "2023-01-11T22:00:08",
      "timezone": "Asia/Tehran",
    },
    "id": "704ee246-38b7-4731-af1d-29d5e634f1b3",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": {
      "date": "2023-01-03T19:03:37",
      "timezone": "America/Argentina/Buenos_Aires",
    },
    "id": "f2f89f0c-b5b4-42f4-a328-e3971c134a22",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": {
      "date": "2022-12-23T12:46:24",
      "timezone": "Pacific/Niue",
    },
    "id": "17c89390-fff1-49ff-a6ae-b38e5be7af35",
    "owner": "Ayla.Rippin",
    "site": "vicious difficult skean",
  },
  {
    "entryTime": {
      "date": "2022-12-21T09:45:37",
      "timezone": "Europe/Vienna",
    },
    "id": "debd1095-a5a0-419f-9051-13e406705fe1",
    "owner": "Ayla.Rippin",
    "site": "modern sorrowful girdle",
  },
  {
    "entryTime": {
      "date": "2022-12-19T05:01:46",
      "timezone": "Indian/Mauritius",
    },
    "id": "b44f77c0-2d35-4a06-aa46-cbd42551b496",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": {
      "date": "2022-12-10T16:44:57",
      "timezone": "Europe/Bucharest",
    },
    "id": "91f6336b-8946-44cb-a47a-560980aa23a5",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2022-12-05T12:16:05",
      "timezone": "Australia/Sydney",
    },
    "id": "7134402d-6581-4e03-a803-7784b29a317c",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": {
      "date": "2022-11-28T21:17:57",
      "timezone": "Pacific/Kosrae",
    },
    "id": "55938f9c-b856-4688-a3ca-6167d1c4b70b",
    "owner": "Ayla.Rippin",
    "site": "squeaky scaly sled",
  },
  {
    "entryTime": {
      "date": "2022-11-07T21:21:03",
      "timezone": "Indian/Mahe",
    },
    "id": "1d56f0e3-4618-4ef6-b233-b19e1b7c4800",
    "owner": "Ayla.Rippin",
    "site": "ringed regal temporary",
  },
  {
    "entryTime": {
      "date": "2022-10-15T03:15:28",
      "timezone": "Indian/Maldives",
    },
    "id": "f18f49f5-7231-4f68-9e14-52253e909f25",
    "owner": "Ayla.Rippin",
    "site": "sympathetic mortified taxicab",
  },
  {
    "entryTime": {
      "date": "2022-10-14T13:37:36",
      "timezone": "Asia/Choibalsan",
    },
    "id": "f4711acb-5f22-49fc-8ebe-bb32da8d7f5e",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": {
      "date": "2022-08-07T09:19:25",
      "timezone": "America/Scoresbysund",
    },
    "id": "7eed022f-e4a9-4796-b5d1-4f721b0b9cfc",
    "owner": "Ayla.Rippin",
    "site": "bold staid lode",
  },
  {
    "entryTime": {
      "date": "2022-08-04T02:56:05",
      "timezone": "Asia/Hovd",
    },
    "id": "50d8e983-4a87-4c2d-bece-f361ef4f8613",
    "owner": "Ayla.Rippin",
    "site": "humming past mathematics",
  },
  {
    "entryTime": {
      "date": "2022-07-26T00:48:15",
      "timezone": "America/Jamaica",
    },
    "id": "5f8a859b-e120-44b9-bdd2-acdc3d596b30",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2022-07-22T23:57:56",
      "timezone": "Europe/Warsaw",
    },
    "id": "b8500a63-4f9c-4998-8be1-58336eacf891",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": {
      "date": "2022-06-17T07:26:24",
      "timezone": "Europe/Kaliningrad",
    },
    "id": "2b859f47-e520-4c09-9280-e51532f62e2c",
    "owner": "Ayla.Rippin",
    "site": "modern sorrowful girdle",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will return a 400 response if the query parameters are invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_date",
      "message": "Invalid date",
      "path": [
        "startDate",
      ],
    },
    {
      "code": "invalid_date",
      "message": "Invalid date",
      "path": [
        "endDate",
      ],
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "skip",
      ],
      "type": "number",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 500,
      "message": "Number must be less than or equal to 500",
      "path": [
        "limit",
      ],
      "type": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'entryTime' | 'logNumber', received 'wetness'",
      "options": [
        "entryTime",
        "logNumber",
      ],
      "path": [
        "sortBy",
      ],
      "received": "wetness",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'asc' | 'desc', received 'backwards'",
      "options": [
        "asc",
        "desc",
      ],
      "path": [
        "sortOrder",
      ],
      "received": "backwards",
    },
  ],
}
`;

exports[`Log entries E2E tests when searching log entries will return a 400 response if the start date comes after the end date in the query string 1`] = `
{
  "issues": [
    {
      "code": "custom",
      "message": "Start date must be before end date.",
      "path": [],
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": false,
      "message": "Number must be greater than 0",
      "minimum": 0,
      "path": [
        "logNumber",
      ],
      "type": "number",
    },
    {
      "code": "invalid_string",
      "message": "Invalid",
      "path": [
        "entryTime",
        "date",
      ],
      "validation": "regex",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received boolean",
      "path": [
        "bottomTime",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "duration",
      ],
      "received": "string",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "maxDepth",
        "depth",
      ],
      "type": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'm' | 'ft', received 'fathoms'",
      "options": [
        "m",
        "ft",
      ],
      "path": [
        "maxDepth",
        "unit",
      ],
      "received": "fathoms",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "notes",
      ],
      "received": "number",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "entryTime",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "duration",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is missing required fields 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "entryTime",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "duration",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the site ID cannot be found 1`] = `"Dive site with ID "e637a808-90cb-4fba-823e-35cd1898ee4a" not found."`;
